Added client, broke out library elements, expanded error handling

--- a/RDSService/RDSService.csproj
+++ b/RDSService/RDSService.csproj
@@ -30,7 +30,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Helpers\" />
+      <ProjectReference Include="..\RDSServiceLibrary\RDSServiceLibrary.csproj" />
     </ItemGroup>
 
 </Project>
