--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Publish NuGet
+name: Build and Publish NuGet and Release
 
 permissions:
   contents: read
@@ -26,15 +26,15 @@ jobs:
     steps:
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: ./RDSServiceClient
+      working-directory: ../RDSServiceClient
 
     - name: Build
       run: dotnet build --configuration Release --no-restore
-      working-directory: ./RDSServiceClient    
+      working-directory: ../RDSServiceClient    
 
     - name: Pack
       run: dotnet pack --configuration Release --no-build --output ../nupkgs
-      working-directory: ./RDSServiceClient
+      working-directory: ../RDSServiceClient
       
     - name: Push to GitHub Packages
       run: dotnet nuget push "*.nupkg" --source "https://nuget.pkg.github.com/kyle079/index.json" --api-key ${{ secrets.GITHUB_TOKEN }} --skip-duplicate
