--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,30 +20,21 @@ jobs:
       with:
         dotnet-version: '7.0'
         
-  publishclient:
-    runs-on: windows-latest
-    
-    steps:
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: ../RDSServiceClient
+      working-directory: ./RDSServiceClient
 
     - name: Build
       run: dotnet build --configuration Release --no-restore
-      working-directory: ../RDSServiceClient    
+      working-directory: ./RDSServiceClient    
 
     - name: Pack
       run: dotnet pack --configuration Release --no-build --output ../nupkgs
-      working-directory: ../RDSServiceClient
+      working-directory: ./RDSServiceClient
       
     - name: Push to GitHub Packages
       run: dotnet nuget push "*.nupkg" --source "https://nuget.pkg.github.com/kyle079/index.json" --api-key ${{ secrets.GITHUB_TOKEN }} --skip-duplicate
       working-directory: ./nupkgs 
-
-  publishservice:
-    runs-on: windows-latest
-    steps:
-    - uses: actions/checkout@v2
     
     - name: Restore dependencies
       run: dotnet restore
