--- a/RDSServiceClient/RDSServiceClient.csproj
+++ b/RDSServiceClient/RDSServiceClient.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\RDSServiceLibrary\RDSServiceLibrary.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+    </ItemGroup>
+
 </Project>
