--- a/RDSServiceLibrary/RDSServiceLibrary.csproj
+++ b/RDSServiceLibrary/RDSServiceLibrary.csproj
@@ -5,6 +5,9 @@
         <Nullable>enable</Nullable>
         <LangVersion>default</LangVersion>
         <TargetFramework>net7.0</TargetFramework>
+        <Version>1.0.2</Version>
+        <AssemblyVersion>1.0.2</AssemblyVersion>
+        <FileVersion>1.0.2</FileVersion>
     </PropertyGroup>
 
     <ItemGroup>
