--- a/RDSServiceTester/RDSServiceTester.csproj
+++ b/RDSServiceTester/RDSServiceTester.csproj
@@ -27,6 +27,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\RDSServiceClient\RDSServiceClient.csproj" />
       <ProjectReference Include="..\RDSService\RDSService.csproj" />
     </ItemGroup>
 
